[workspace]
members = [
    ".",
    "coordinate",
    "diffeq",
    "matrix",
    "number_calc"
]

[package]
name = "autocalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coordinate = { path = "./coordinate" }
diffeq = { path = "./diffeq" }
matrix = { path = "./matrix" }
statrs = "0.16.0"
trigo = { git = "https://github.com/doraneko94/trigo" }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
